Uppdaterat programmet inför tester.